; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/nfit/extr_core.c_family_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/nfit/extr_core.c_family_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.nvdimm = type { i32 }
%struct.nfit_mem = type { i64 }

@ENXIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @family_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @family_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.nvdimm*, align 8
  %9 = alloca %struct.nfit_mem*, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load %struct.device*, %struct.device** %5, align 8
  %11 = call %struct.nvdimm* @to_nvdimm(%struct.device* %10)
  store %struct.nvdimm* %11, %struct.nvdimm** %8, align 8
  %12 = load %struct.nvdimm*, %struct.nvdimm** %8, align 8
  %13 = call %struct.nfit_mem* @nvdimm_provider_data(%struct.nvdimm* %12)
  store %struct.nfit_mem* %13, %struct.nfit_mem** %9, align 8
  %14 = load %struct.nfit_mem*, %struct.nfit_mem** %9, align 8
  %15 = getelementptr inbounds %struct.nfit_mem, %struct.nfit_mem* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i32, i32* @ENXIO, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %4, align 4
  br label %27

21:                                               ; preds = %3
  %22 = load i8*, i8** %7, align 8
  %23 = load %struct.nfit_mem*, %struct.nfit_mem** %9, align 8
  %24 = getelementptr inbounds %struct.nfit_mem, %struct.nfit_mem* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @sprintf(i8* %22, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i64 %25)
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %21, %18
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local %struct.nvdimm* @to_nvdimm(%struct.device*) #1

declare dso_local %struct.nfit_mem* @nvdimm_provider_data(%struct.nvdimm*) #1

declare dso_local i32 @sprintf(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
